# ffmpeg_demo

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: AudioChannel.cpp  CMakeLists.txt  JNICallbackHelper.cpp  MarcsPlayerCPP.cpp  VideoChannel.cpp  native-lib.cpp
app/src/main/cpp/inc/: AudioChannel.h  BaseChannel.h  JNICallbackHelper.h  MarcsPlayerCPP.h  VideoChannel.h  util.h
app/src/main/cpp/libcppcount/: CMakeLists.txt  caculate.cpp  caculate.h
app/src/main/cpp/libget/: CMakeLists.txt  get.c  get.h
app/src/main/java/com/wulala/myapplicationndk/: MainActivity.java  MarcsPlayer.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
